--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Potencial Pyme | Transformá tus datos en decisiones inteligentes</title>
+  <link rel="icon" href="potencialpymeicon-removebg-preview.png" type="image/png">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <!-- 🔹 Header -->
   <header>
+    <div class="web-logo">
+      <img class="logo" src="potencialpymelogoblanco2.png">
+    </div>
     <div class="container">
-      <h1>Potencial Pyme</h1>
+
       <p class="tagline">Transformá tus datos en decisiones inteligentes</p>
     </div>
 
