--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <a href="#contacto"><p class="button1">Contactanos</p></a>
     <a href="#contacto"><p class="button1">Instagram</p></a>
     <a href="#contacto"><p class="button1">Youtube</p></a>
+    <a href="faq.html"><p class="button2">FAQ</p></a>
     </div>
 
   </header>
