--- a/index.html
+++ b/index.html
@@ -114,6 +114,19 @@
     </div>
   </div>
 
+    <!-- 🔹 Planes -->
+    <section id="planes-info" class="section">
+    <h2 class="planes-title">Nuestros Planes</h2>
+    <div class="planes-obtener-info">
+      <div class="conteiner-button">
+        <p>Hace click sobre el siguiente botón y podrás ver todos nuestros PLANES + PRECIOS de forma detallada.</p>
+        <a href="planes.html">
+        <button class="planes-link-button">VER PLANES</button>
+        </a>
+      </div>
+    </div>
+  </section>
+
   <!-- 🔹 Contacto -->
   <section id="contacto" class="section light">
     <h2>Contacto</h2>
@@ -124,6 +137,7 @@
       <button type="submit">Enviar por WhatsApp</button>
     </form>
   </section>
+  
 
   <!-- 🔹 Footer -->
   <footer>
