--- a/planes.html
+++ b/planes.html
@@ -24,7 +24,7 @@
       <div class="pricing-card">
         <div class="plan-header esencial">
           <h3>ESENCIAL</h3>
-          <p class="price">$45.000 - $60.000 <span>ARS/mes</span></p>
+          <p class="price"><span></span></p>
         </div>
         <p class="ideal">Ideal para: Emprendedores o negocios muy pequeños.</p>
         <ul>
@@ -41,7 +41,7 @@
       <div class="pricing-card destacado">
         <div class="plan-header potenciador">
           <h3>POTENCIADOR</h3>
-          <p class="price">$85.000 - $120.000 <span>ARS/mes</span></p>
+          <p class="price"><span></span></p>
         </div>
         <p class="ideal">Ideal para: PYMES que buscan crecimiento ordenado.</p>
         <ul>
@@ -61,7 +61,7 @@
       <div class="pricing-card">
         <div class="plan-header empresarial">
           <h3>EMPRESARIAL</h3>
-          <p class="price">$150.000 - $200.000 <span>ARS/mes</span></p>
+          <p class="price"><span></span></p>
         </div>
         <p class="ideal">Ideal para: Empresas con múltiples productos/locales.</p>
         <ul>
